@@ -75,9 +75,9 @@ for the distance and angle covariates (e.g., 'center1.dist', 'center1.angle', 'c
 of \code{centers} as \code{paste0(rep(rownames(centers),each=2),c(".dist",".angle"))}. Note that the angle covariates for each activity center are calculated relative to 
 the previous movement direction instead of standard directions relative to the x-axis; this is to allow turning angles to be simulated as a function of these covariates using circular-circular regression.}
 
-\item{obsPerAnimal}{Either the number of the number of observations per animal (if single value),
-or the bounds of the number of observations per animal (if vector of two values). In the latter case,
-the numbers of obervations generated for each animal are uniformously picked from this interval.
+\item{obsPerAnimal}{Either the number of the number of observations per animal (if single value) or the bounds of the number of observations per animal (if vector of two values). In the latter case, 
+the numbers of obervations generated for each animal are uniformously picked from this interval. Alternatively, \code{obsPerAnimal} can be specified as
+a list of length \code{nbAnimals} with each element providing the number of observations (if single value) or the bounds (if vector of two values) for each individual.
 Default: \code{c(500,1500)}.}
 
 \item{initialPosition}{2-vector providing the x- and y-coordinates of the initial position for all animals. Default: \code{c(0,0)}.}
